# PyRTL

./: .readthedocs.yaml  CHANGELOG.md  README.md  codecov.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-release.yml  python-test.yml
docs/: Makefile  README.md  basic.rst  conf.py  export.rst  helpers.rst  regmem.rst  requirements.txt
docs/release/: README.md
examples/: example1-combologic.py  example1.1-signed-numbers.py  example1.2-wire-struct.py  example2-counter.py
pyrtl/: __init__.py  compilesim.py  conditional.py  core.py  corecircuits.py  helperfuncs.py  importexport.py  memory.py  passes.py  simulation.py  wire.py
pyrtl/rtllib/: multipliers.py
release/: README.md
tests/: test_compilesim.py  test_helperfuncs.py  test_importexport.py  test_memblock.py  test_signed.py  test_simulation.py
