# See PyRTL's release documentation in release/README.md
#
# This file configures PyRTL's distribution archives, which are built and
# uploaded to PyPI with GitHub actions.
#
# This configuration is based on the "Packaging Python Projects" tutorial at
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrtl"
version = "0.11.0rc1"
authors = [
  {name="Timothy Sherwood", email="sherwood@cs.ucsb.edu"},
  {name="John Clow"},
  {name="UCSBarchlab"},
]
description = "RTL-level Hardware Design and Simulation Toolkit"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
blif = ["pyparsing"]

[project.urls]
Homepage = "http://ucsbarchlab.github.io/PyRTL/"
GitHub = "https://github.com/UCSBarchlab/PyRTL"
Documentation = "https://pyrtl.readthedocs.io/"
