# See PyRTL's release documentation in docs/release/README.md
#
# This file configures PyRTL's distribution archives, which are built and
# uploaded to PyPI with GitHub actions.
#
# This configuration is roughly based on the "Packaging Python Projects"
# tutorial at
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyrtl"
# hatch-vcs determines the version number from the latest git tag.
dynamic = ["version"]
authors = [
  {name="Timothy Sherwood", email="sherwood@cs.ucsb.edu"},
  {name="John Clow"},
  {name="UCSBarchlab"},
]
description = "RTL-level Hardware Design and Simulation Toolkit"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
# Required by `input_from_blif`.
blif = ["pyparsing"]
# Required by `block_to_svg`.
svg = ["graphviz"]

[project.urls]
Homepage = "http://ucsbarchlab.github.io/PyRTL/"
GitHub = "https://github.com/UCSBarchlab/PyRTL"
Documentation = "https://pyrtl.readthedocs.io/"
Changelog = "https://github.com/UCSBarchlab/PyRTL/blob/development/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
